# SmartQRCode

./: .gitignore  README.md  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native_decoder.cpp
app/src/main/java/com/smartqrcode/: MainActivity.kt  NativeBridge.kt  NativeDecoder.kt  OpenCvSupport.kt  ScanPipeline.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
